// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Length /> should render 1`] = `
<Memo(ConnectFunction)
  to={[Function]}
>
  100
   amino acids
   (complete)
</Memo(ConnectFunction)>
`;

exports[`<Length /> should render 2`] = `
<Memo(ConnectFunction)
  to={[Function]}
>
  100
   amino acids
   (fragment)
</Memo(ConnectFunction)>
`;

exports[`<Length /> should render 3`] = `
<Memo(ConnectFunction)
  to={[Function]}
>
  100
   amino acids
</Memo(ConnectFunction)>
`;
